download like icon

--- a/source/pug/components/_hero.pug
+++ b/source/pug/components/_hero.pug
@@ -15,8 +15,8 @@ mixin hero(data)
     h3.hero__voteQuestion=data.question
    .hero__buttons
      button.hero__button.hero__buttonLike
-      img(src="/images/icons/like.svg", alt="")
+      img.hero__icon(src="/images/icons/like.svg", alt="")
      button.hero__button.hero__buttonDislike 
-      img(src="/images/icons/dislike.svg", alt="")
+      img.hero__icon(src="/images/icons/dislike.svg", alt="")
      
   +bar()
