--- a/source/pug/components/_meta.pug
+++ b/source/pug/components/_meta.pug
@@ -1,12 +1,14 @@
 mixin meta(title = "Maloka")
   include _hero
   include _icon
+  include _scripts
+  include _bar
 
   doctype html
   html(lang="es")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title="Prueba Front"
-    link(rel="stylesheet", href="./css/styles.css")
+    head
+      meta(charset="UTF-8")
+      meta(http-equiv="X-UA-Compatible", content="IE=edge")
+      meta(name="viewport", content="width=device-width, initial-scale=1.0")
+      title="Prueba Front"
+      link(rel="stylesheet", href="./css/styles.css")
