create pug of card

--- a/source/pug/components/_meta.pug
+++ b/source/pug/components/_meta.pug
@@ -3,7 +3,7 @@ mixin meta(title = "Maloka")
   include _icon
   include _scripts
   include _bar
-
+  include _card
   doctype html
   html(lang="es")
     head
