--- a/source/sass/components/_bar.scss
+++ b/source/sass/components/_bar.scss
@@ -7,7 +7,7 @@
   height: 60px;
 
   &__porcentage {
-    position: relative;
+    padding: 0 size(1.5);
   }
 
   &__like {
@@ -21,17 +21,9 @@
   &__number {
     font-size: size(6);
     color: $white;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 0 size(2);
 
     &Like {
-      right: 0;
-    }
-
-    &Dislike {
-      left: 0;
+      text-align: end;
     }
   }
 }
