--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -1,5 +1,5 @@
 @import "components/mixins", "components/variables", "components/bar",
-  "components/hero", "components/icon";
+  "components/hero", "components/icon", "components/card";
 
 * {
   margin: 0;
