--- a/source/sass/components/_mixins.scss
+++ b/source/sass/components/_mixins.scss
@@ -7,3 +7,18 @@
 @function rem($valuepixel: 1) {
   @return math.div($valuepixel, 16) + rem;
 }
+
+@mixin latoLight() {
+  font-family: "lato", sans-serif;
+  font-weight: 300;
+}
+
+@mixin lato() {
+  font-family: "lato", sans-serif;
+  font-weight: 400;
+}
+
+@mixin latoBold() {
+  font-family: "lato", sans-serif;
+  font-weight: 700;
+}
