--- a/source/pug/components/_meta.pug
+++ b/source/pug/components/_meta.pug
@@ -13,3 +13,6 @@ mixin meta(title = "Maloka")
       meta(name="viewport", content="width=device-width, initial-scale=1.0")
       title="Prueba Front"
       link(rel="stylesheet", href="./css/styles.css")
+      link(rel="preconnect" href="https://fonts.googleapis.com")
+      link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+      link(href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet")
