--- a/source/sass/components/_bar.scss
+++ b/source/sass/components/_bar.scss
@@ -4,10 +4,9 @@
   bottom: 0;
   width: 100%;
   display: flex;
-  height: 60px;
 
   &__porcentage {
-    padding: 0 size(1.5);
+    padding: size() size(2);
   }
 
   &__like {
@@ -19,8 +18,9 @@
   }
 
   &__number {
-    font-size: size(6);
+    font-size: rem(48);
     color: $white;
+    line-height: 1;
 
     &Like {
       text-align: end;
