--- a/source/sass/components/_card.scss
+++ b/source/sass/components/_card.scss
@@ -1,28 +1,36 @@
 .card {
+  min-height: size(65);
   display: flex;
+  flex-direction: column;
   position: relative;
   width: 50%;
   color: #ffffff;
   background-size: cover;
   background-repeat: no-repeat;
-  flex-direction: column;
+  background-position: center;
+  justify-content: flex-end;
+  padding-bottom: size(10);
 
   &__header {
     display: flex;
+    align-items: center;
   }
 
   &__image {
-    height: 30px;
-    width: 30px;
+    height: size(4);
+    width: size(4);
   }
 
   &__title {
     font-size: size(5.5);
+    @include lato;
   }
 
   &__description {
     font-size: size(2);
     width: 80%;
+    padding: size(2) size(4);
+    @include latoLight;
   }
 
   &__link {
@@ -32,12 +40,24 @@
   &__text {
     font-size: size(1.5);
     font-weight: bold;
-    width: 60%;
+    width: 20%;
+    text-align: end;
   }
 
   &__cta {
     display: flex;
     justify-content: space-between;
-    margin-bottom: size(5);
+    padding: size() size(4);
+    align-items: center;
+  }
+
+  .bar {
+    &__porcentage {
+      padding: size() size(2);
+    }
+
+    &__number {
+      font-size: rem(30);
+    }
   }
 }
