--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -1,8 +1,19 @@
 @import "components/mixins", "components/variables", "components/bar",
-  "components/hero", "components/icon", "components/card";
+  "components/hero", "components/icon", "components/card", "components/link";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  @include lato;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0 size(15);
 }
