--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -3,6 +3,7 @@ include components/_meta
 +meta() 
 body 
  +hero(data.superheros[0], data.menu)
+ h2.title Super Heroes anteriores
  .cards
   each card in ["0", "1", "2", "3"]
    +card(data.superheros[0])
