--- a/source/pug/components/_meta.pug
+++ b/source/pug/components/_meta.pug
@@ -16,3 +16,4 @@ mixin meta(title = "Maloka")
       link(rel="preconnect" href="https://fonts.googleapis.com")
       link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
       link(href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet")
+      link(href="https://file.myfontastic.com/FW2vTtyu5PNBUKVgtwZhFF/icons.css" rel="stylesheet")
