--- a/source/sass/components/_card.scss
+++ b/source/sass/components/_card.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 50%;
+  width: calc(50% - #{size(2.5)});
   color: #ffffff;
   background-size: cover;
   background-repeat: no-repeat;
