--- a/source/sass/components/_hero.scss
+++ b/source/sass/components/_hero.scss
@@ -10,6 +10,18 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: size(9);
+    color: $white;
+  }
+
+  &__option {
+    color: $white;
+    font-size: rem(16);
+    padding: size() size(3);
+    text-decoration: none;
+  }
+
+  &__iconSearch {
+    padding: 0 size(4);
   }
 
   &__vote {
@@ -65,7 +77,7 @@
     }
   }
 
-  &__icon {
+  &__logo {
     width: 20%;
   }
 }
