--- a/source/sass/components/_variables.scss
+++ b/source/sass/components/_variables.scss
@@ -3,3 +3,4 @@ $greentransparent: rgba(0, 174, 165, 0.6);
 $orangetransparent: rgba(255, 163, 0, 0.6);
 $orange: #ffa300;
 $white: #ffffff;
+$black: #000000;
