adding js of cards, and superheroesPugs

--- a/source/pug/components/_hero.pug
+++ b/source/pug/components/_hero.pug
@@ -8,7 +8,7 @@ mixin hero(hero, menu)
     .hero__iconSearch.icon-search(src="/images/.png", alt="")
   .hero__vote
    .hero__voteinfo
-    p.hero__voteOpinion Dinos tu opinion sobre
+    p.hero__voteOpinion Dínos tu opinión sobre
     h1.hero__voteTitle=hero.name
       span ?
     p.hero__voteText=hero.text
@@ -21,6 +21,4 @@ mixin hero(hero, menu)
       .icons.icon-like
      button.hero__button.hero__buttonDislike
       .icons.icon-dislike
-
-
   +bar()
