--- a/source/pug/components/_card.pug
+++ b/source/pug/components/_card.pug
@@ -1,12 +1,12 @@
 mixin card(data)
 
- .card(style="background-image:url("+ data.background + ")")
+ .card(style="background-image:url("+ data.background + ")" data-name=data.name)
   .card__header
    img.card__image(src="/images/icons/dislike.svg", alt="")
    h2.card__title=data.name
   p.card__description=data.text
   .card__cta
-   a.link(href=data.link)=data.linkText
+   a.link(href="/" + data.name + ".html")=data.linkText
    p.card__text
      |!{data.info} 
   +bar() 
