create footer pug and some styles

--- a/source/pug/components/_meta.pug
+++ b/source/pug/components/_meta.pug
@@ -4,6 +4,7 @@ mixin meta(title = "Maloka")
   include _scripts
   include _bar
   include _card
+  include _footer
   
   doctype html
   html(lang="es")
