--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -1,5 +1,6 @@
 @import "components/mixins", "components/variables", "components/bar",
-  "components/hero", "components/icon", "components/card", "components/link";
+  "components/hero", "components/icon", "components/card", "components/link",
+  "components/footer";
 
 * {
   margin: 0;
