chenges styles in footer"

--- a/source/pug/components/_footer.pug
+++ b/source/pug/components/_footer.pug
@@ -1,9 +1,9 @@
 mixin footer(links)
  footer.footer
-  .links 
+  .footer__links 
    each link in data.footer.links
     a(href=link.link).footer__link=link.text
-  .social 
+  .footer__social 
    p.footer__followme Siguenos 
    .icon-facebook-squared
    .icon-twitter 
