--- a/source/pug/components/_meta.pug
+++ b/source/pug/components/_meta.pug
@@ -5,6 +5,7 @@ mixin meta(title = "Maloka")
   include _bar
   include _card
   include _footer
+  include _notification
   
   doctype html
   html(lang="es")
