--- a/source/pug/ironman.pug
+++ b/source/pug/ironman.pug
@@ -3,11 +3,12 @@ include components/_meta
 +meta() 
 body 
  +hero(data.superheros[0], data.menu)
- h2.title Super Heroes anteriores
- .cards
-  each superhero in data.superheros
-   if superhero.name != "ironman"
-    +card(superhero)
- +footer()
+ .padding
+   h2.title Super Heroes anteriores
+   .cards
+      each superhero in data.superheros
+         if superhero.name != "ironman"
+            +card(superhero)
+   +footer()
  +scripts() 
  
