--- a/source/sass/components/_footer.scss
+++ b/source/sass/components/_footer.scss
@@ -1,5 +1,29 @@
 .footer {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  border-top: 1px;
+  border-top: dotted;
+  padding: size(4) 0 size(20);
+
+  &__links {
+    font-size: rem(12);
+  }
+
+  &__link {
+    color: $black;
+    padding-right: size(3);
+    text-decoration: none;
+  }
+
+  &__social {
+    font-size: rem(12);
+    display: flex;
+    align-items: center;
+
+    .icon-facebook-squared,
+    .icon-twitter {
+      font-size: size(3);
+      padding-left: size(3);
+    }
+  }
 }
