--- a/source/sass/components/_footer.scss
+++ b/source/sass/components/_footer.scss
@@ -24,6 +24,8 @@
     .icon-twitter {
       font-size: size(3);
       padding-left: size(3);
+      color: $black;
+      text-decoration: none;
     }
   }
 }
