--- a/source/pug/components/_hero.pug
+++ b/source/pug/components/_hero.pug
@@ -7,18 +7,26 @@ mixin hero(hero, menu)
       a.hero__option(href=option.link)=option.text
     .hero__iconSearch.icon-search(src="/images/.png", alt="")
   .hero__vote
-   .hero__voteinfo
-    p.hero__voteOpinion Dínos tu opinión sobre
-    h1.hero__voteTitle=hero.name
-      span ?
-    p.hero__voteText=hero.text
-    .hero__votewiki
-      span.icons.icon-wikipedia 
-      a.hero__voteLink(href=hero.link)=hero.linkText
-    h3.hero__voteQuestion ¿Cuál es su voto?
-   .hero__buttons
-     button.hero__button.hero__buttonLike
-      .icons.icon-like
-     button.hero__button.hero__buttonDislike
-      .icons.icon-dislike
+    .hero__voteinfo
+      p.hero__voteOpinion Dínos tu opinión sobre
+      h1.hero__voteTitle=hero.name
+        span ?
+      p.hero__voteText=hero.text
+      .hero__votewiki
+        span.icons.icon-wikipedia 
+        a.hero__voteLink(href=hero.link)=hero.linkText
+      h3.hero__voteQuestion ¿Cuál es su voto?
+      .vote__like 
+        p.hero__likeName="Marvel -" + hero.name
+        .icons.icon-like
+        .icons.icon-dislike
+        h2.hero__likeRegister Tu voto ha sido registrado
+        p.hero__liketext=hero.text
+        button.hero__likeButton ver mas
+
+    .hero__buttons
+      button.hero__button.hero__buttonLike
+        .icons.icon-like
+      button.hero__button.hero__buttonDislike
+        .icons.icon-dislike
   +bar()
