--- a/source/pug/ironman.pug
+++ b/source/pug/ironman.pug
@@ -4,11 +4,12 @@ include components/_meta
 body 
  +hero(data.superheros[0], data.menu)
  .padding
+   +notification(data.notification)
    h2.title Super Heroes anteriores
    .cards
       each superhero in data.superheros
          if superhero.name != "ironman"
             +card(superhero)
-   +footer()
+   +footer(data.footer)
  +scripts() 
  
