--- a/source/sass/components/_hero.scss
+++ b/source/sass/components/_hero.scss
@@ -4,6 +4,7 @@
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
+  margin-bottom: size(4);
 
   &::before {
     content: "";
