--- a/source/pug/components/_hero.pug
+++ b/source/pug/components/_hero.pug
@@ -1,5 +1,5 @@
 mixin hero(hero, menu)
- .hero(data-name=hero.name)
+ .hero(data-name=hero.name style="background-image:url("+ hero.background + ")")
   nav.hero__navigation
    img.hero__logo(src="/images/logo.png", alt="icono heroes")
    .hero__options
