--- a/source/sass/components/_hero.scss
+++ b/source/sass/components/_hero.scss
@@ -1,10 +1,11 @@
 .hero {
   padding: size(3) size(15) size(15);
-  background-image: url("/images/ironman.png");
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
   margin-bottom: size(4);
+  max-width: $size-max-width;
+  margin: 0 auto;
 
   &::before {
     content: "";
