--- a/source/sass/components/_link.scss
+++ b/source/sass/components/_link.scss
@@ -1,6 +1,10 @@
 .link {
   border: 1px solid;
   color: white;
-  padding: 10px 40px;
+  padding: size() size(5);
   text-decoration: none;
+
+  @media ($mediamin) {
+    padding: size();
+  }
 }
