--- a/source/sass/components/_footer.scss
+++ b/source/sass/components/_footer.scss
@@ -1,22 +1,24 @@
 .footer {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   border-top: dotted;
-  padding: size(4) 0 size(20);
+  padding: size(4) 0;
 
   &__links {
-    font-size: rem(12);
+    font-size: rem(10);
+    padding: size(2) 0;
   }
 
   &__link {
     color: $black;
-    padding-right: size(3);
+    padding-right: size();
     text-decoration: none;
   }
 
   &__social {
-    font-size: rem(12);
+    font-size: rem(10);
     display: flex;
     align-items: center;
 
@@ -26,6 +28,21 @@
       padding-left: size(3);
       color: $black;
       text-decoration: none;
+    }
+  }
+
+  @media ($mediamin) {
+    flex-direction: row;
+    padding: size(4) 0 size(20);
+
+    &__social {
+      font-size: rem(12);
+    }
+  }
+
+  @media ($medialarge) {
+    &__links {
+      font-size: rem(12);
     }
   }
 }
