--- a/source/sass/components/_variables.scss
+++ b/source/sass/components/_variables.scss
@@ -6,3 +6,5 @@ $white: #ffffff;
 $black: #000000;
 $gray: #ececec;
 $size-max-width: 1300px;
+$mediamin: "min-width:768px";
+$medialarge: "min-width:1129px";
