--- a/source/sass/components/_hero.scss
+++ b/source/sass/components/_hero.scss
@@ -187,7 +187,7 @@
   }
 
   &__likeButton {
-    width: 30%;
+    width: 60%;
     cursor: pointer;
     font-size: rem(14);
     @include lato;
@@ -195,7 +195,7 @@
     color: $white;
     border: 1px solid $white;
     background: transparent;
-    margin: 0 auto size(8);
+    margin: 0 auto size(2);
   }
 
   @media ($mediamin) {
@@ -216,6 +216,11 @@
     &__button {
       padding: size(3);
     }
+
+    &__likeButton {
+      width: 60%;
+      margin: 0 auto size(6.5);
+    }
   }
 
   @media ($medialarge) {
@@ -229,6 +234,11 @@
     &__voteTitle {
       font-size: rem(60);
       margin-bottom: size(3);
+    }
+
+    &__likeButton {
+      width: 40%;
+      margin: 0 auto size(9);
     }
   }
 }
