--- a/source/pug/components/_footer.pug
+++ b/source/pug/components/_footer.pug
@@ -4,6 +4,6 @@ mixin footer(data)
    each link in data.links
     a(href=link.link).footer__link=link.text
   .footer__social 
-    p.footer__followme Siguenos 
+    p.footer__followme Síguenos 
     a(href=data.facebook).icon-facebook-squared
     a(href=data.twitter).icon-twitter 
