--- a/source/sass/components/_hero.scss
+++ b/source/sass/components/_hero.scss
@@ -7,6 +7,7 @@
   max-width: $size-max-width;
   margin: 0 auto size(4);
   background-position: right;
+  overflow: hidden;
 
   &::before {
     content: "";
@@ -73,6 +74,7 @@
   &__voteTitle {
     font-size: rem(45);
     margin-bottom: size(3);
+    text-transform: capitalize;
   }
 
   &__voteText {
@@ -239,6 +241,10 @@
     &__likeButton {
       width: 40%;
       margin: 0 auto size(9);
+    }
+
+    &__navigation {
+      flex-direction: row;
     }
   }
 }
