--- a/source/pug/batman.pug
+++ b/source/pug/batman.pug
@@ -3,7 +3,7 @@ include components/_meta
 +meta() 
 body 
  +hero(data.superheros[3], data.menu)
- .padding
+ .wrapper
    +notification(data.notification)
    h2.title Super Heroes anteriores
    .cards
