--- a/source/sass/components/_card.scss
+++ b/source/sass/components/_card.scss
@@ -10,6 +10,7 @@
   justify-content: flex-end;
   padding-bottom: size(10);
   margin-bottom: size(4);
+  overflow: hidden;
 
   &__header {
     display: flex;
